--- a/client/css/Login.scss
+++ b/client/css/Login.scss
@@ -131,7 +131,7 @@
 
 .TextInput {
   height: 3rem;
-  width: 24vw;
+  width: 20vw;
   background-color: transparent;
   border: none;
   border-radius: 5px;
@@ -139,7 +139,6 @@
   z-index: 1;
   padding: 5px;
   height: fit-content;
-
   &:not(:placeholder-shown)+legend+.TextInputHighlight {
     transform-origin: left top 0px;
     transform: translate(0.8rem, -1rem) scale(0.5);
@@ -178,7 +177,7 @@
   border-radius: 8px;
   height: fit-content;
   box-shadow: 0px 0px 10px rgba(36, 215, 255, 0.5);
-
+  inset: 0px 0px 0px;
   &:focus-within {
     border: 1.5px solid #52baff;
   }
@@ -186,7 +185,7 @@
   input {
     padding: 0;
     margin: 0px 5px;
-    height: 2.5rem;
+    height: 3rem;
     font-size: 1.5rem;
   }
 
@@ -196,9 +195,13 @@
     visibility: hidden;
     font-size: 0.8rem;
     padding: 0;
-    transition: max-width 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
     overflow: hidden;
-
+    margin-left: -9.4rem;
+    height: 0px;
+    @-moz-document url-prefix() {
+      margin-left: 0; /* Reset margin for Firefox */
+    }
     span {
       visibility: visible;
       opacity: 0;
@@ -215,7 +218,7 @@
   align-items: center;
   position: absolute;
   padding: 0px 5px;
-  top: 1rem;
+  top: 0.5rem;
   left: 0rem;
   transform: scale(1);
   transition: all 0.2s ease-in-out;
