--- a/client/css/Modal.scss
+++ b/client/css/Modal.scss
@@ -9,15 +9,18 @@
   justify-content: center;
   border-radius: 8px;
   align-items: center;
-  width: fit-content;
+  width: 20vw;
+  height: 30vh;
   border: 2px solid white;
+  overflow: scroll;
   .projectsList {
-    width: 14vw;
+    width: fit-content;
     height: 30vh;
     overflow: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0.5rem;
   }
   .textModalInner {
     display: flex;
@@ -32,10 +35,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // width: 100%;
+    width: fit-content;
     border-radius: 8px;
     background-color: #6fcdff00;
     transition: all 0.2s ease-in-out;
+    margin: 0.2rem 0.5rem;
     &:hover {
       scale: 1.1;
       background-color: rgba(255, 255, 255, 0.1);
@@ -54,6 +58,11 @@
     color: $cyan-text;
     background-size: cover;
     transition: all 0.2s ease-in-out;
+    margin: 5px 0px;
+    display: inline-block;
+    text-wrap: nowrap;
+    word-wrap: break-word;
+    white-space: nowrap;
     &:hover {
       scale: 1.1;
       background-color: rgba(255, 255, 255, 0.1);
@@ -116,6 +125,9 @@
     font-size: 1rem;
     margin: 0px 5px;
     text-decoration: underline;
+    word-wrap: break-word;
+    white-space: nowrap;
+    overflow: scroll;
   }
   button {
     color: red;
